tests/expectations/compiler/integers/i32/min_fail.out
Error [ESAZ0374007]: Binary operation `-2147483647i32 - 2i32` failed at compile time: sub overflow.
    --> compiler-test:8:16
     |
   8 |         return a - 2i32; // This line attempts to return -2147483649i32 however, the smallest i32 value is -2147483648i32.
     |                ^^^^^^^^
